<resources>
    <string name="app_name">3-character idioms Japanese</string>

    <string name="blank">"　"</string>
    <string name="instruction">Trying to complete 3 idioms</string>
    <string name="record">Result : %1$d</string>
    <string name="delete_1char">Erase</string>
    <string name="look_answer">See answer</string>
    <string name="look_answer2">Give up and see the answer</string>
    <string name="to_answer">Answer</string>
    <string name="next_question">Next</string>
    <string name="search_disc">Search Web</string>
    <string name="search_word">%1$s　mean</string>
    <string name="goal_achievement">Congrats!\nGoal achievement!</string>

    <string name="answered_list">answered_list</string>
    <string name="save_day">save_day</string>
    <string name="save_week">save_week</string>
    <string name="max_score">max_score</string>
    <string name="look_count">look_count</string>
    <string name="count_induce">count_induce</string>

    <!--メイン画面で戻るボタンを押下したときのメッセージ-->
    <string name="final_title">Exit menu</string>
    <string name="final_message">Do you want to exit the application?</string>
    <string name="final_ok">Exit</string>
    <string name="final_cancel">Cancel</string>

    <!--週が開けて前回までの記録がクリアされるときのメッセージ-->
    <string name="next_title">Result</string>
    <string name="next_title1">So far high scores</string>
    <string name="next_title2">Previous score</string>
    <string name="next_message1">Let\'s work hard this week!</string>
    <string name="next_message2">Congrats!\nIt\'s a record update!\nIt\'s the best the previous record!</string>
    <string name="next_ok">OK</string>

    <string name="close">End</string>
    <string name="dashboard">Answer List</string>

    <string name="confirm">confirm</string>
    <string name="confirm_message1">Do you really give up and see the answer?</string>
    <string name="confirm_message2">You are about to reset the record for this month.\nCan you really reset?</string>

    <string name="min">0</string>
    <string name="max">50</string>

    <string name="dashboard_title">Level %1$d : %2$d more idioms</string>
    <string name="desc_result">This week\'s record : %1$d idioms</string>
    <string name="desc_no_answer">Not yet answer this week</string>

    <string name="induce_title">Thank you for always using this App</string>
    <string name="induce_message">I would be pleased if you could evaluate it and comments, if you have any requests or dissatisfaction about usability and specifications.\nI look forward to working with you.</string>
    <string name="induce_ok">Evaluate</string>
    <string name="induce_cancel">Later</string>

    <!--本番-->
    <string name="adUnitId">ca-app-pub-1485554329820885/3934827859</string>
    <!--テスト-->
    <!--string name="adUnitId">ca-app-pub-3940256099942544/6300978111</string-->
    <string name="adUnitInterId">ca-app-pub-1485554329820885/3147453854</string>
    <string name="adUnitTestId">ca-app-pub-3940256099942544/6300978111</string>
</resources>
