<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.aufthesis.characteridiom3.MainActivity">

    <!--FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:gravity="bottom">


            <TextView
                android:id="@+id/disc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="start"
                android:textSize="13sp"
                android:text="@string/instruction"/>

            <TextView
                android:id="@+id/record"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="13sp"
                android:textColor="#FF0000"
                android:text="@string/record"/>
        </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                style="android:attr/buttonBarButtonStyle"
                android:visibility="invisible"/>
            <Button
                android:id="@+id/char1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                style="android:attr/buttonBarButtonStyle"
                android:textSize="40sp"/>
            <Button
                android:id="@+id/char2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                style="android:attr/buttonBarButtonStyle"
                android:textSize="40sp"/>
            <Button
                android:id="@+id/char3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                style="android:attr/buttonBarButtonStyle"
                android:textSize="40sp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                style="android:attr/buttonBarButtonStyle"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                style="android:attr/buttonBarButtonStyle"
                android:visibility="invisible"
                android:id="@+id/button" />

            <Button
                android:id="@+id/char4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                style="android:attr/buttonBarButtonStyle"
                android:textSize="40sp"/>
            <Button
                android:id="@+id/char5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                style="android:attr/buttonBarButtonStyle"
                android:textSize="40sp"/>
            <Button
                android:id="@+id/char6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                style="android:attr/buttonBarButtonStyle"
                android:textSize="40sp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                style="android:attr/buttonBarButtonStyle"
                android:visibility="invisible"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                style="android:attr/buttonBarButtonStyle"
                android:visibility="invisible"/>
            <Button
                android:id="@+id/char7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                style="android:attr/buttonBarButtonStyle"
                android:textSize="40sp"/>
            <Button
                android:id="@+id/char8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                style="android:attr/buttonBarButtonStyle"
                android:textSize="40sp"/>
            <Button
                android:id="@+id/char9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                style="android:attr/buttonBarButtonStyle"
                android:textSize="40sp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                style="android:attr/buttonBarButtonStyle"
                android:visibility="invisible"/>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
    <!--/FrameLayout-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/ans1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_border"
                android:textSize="50sp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textStyle="bold"
                android:text="@string/blank"/>
            <TextView
                android:id="@+id/ans2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_border"
                android:textSize="50sp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textStyle="bold"
                android:text="@string/blank"/>
            <TextView
                android:id="@+id/ans3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_border"
                android:textSize="50sp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textStyle="bold"
                android:text="@string/blank"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_backspace_black_24dp"
                android:background="#00000000"
                style="android:attr/buttonBarButtonStyle"
                android:text="@string/delete_1char"/>
            <Button
                android:id="@+id/look_answer_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/rectangle"
                style="android:attr/buttonBarButtonStyle"
                android:text="@string/look_answer2"/>
            <Button
                android:id="@+id/answer_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/circle"
                style="android:attr/buttonBarButtonStyle"
                android:text="@string/to_answer"/>
            <Button
                android:id="@+id/renew"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_fast_forward_black_24dp"
                android:background="#00000000"
                style="android:attr/buttonBarButtonStyle"
                android:text="@string/next_question"/>
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adUnitId="@string/adUnitId"
            ads:adSize="BANNER" />

    </LinearLayout>
    </ScrollView>
</LinearLayout>
